refactor: processFundingActions 생성 후 바로 기여처리 되도록 수정